fix(rover-ctl,rover-server): correctly detect agent specifications; align enum validation (#675)
